--- a/about.html
+++ b/about.html
@@ -72,6 +72,6 @@
       </div> <!-- end of posts row -->
     </div> <!-- end of content -->
   </div> <!-- end of external fluid row -->
-  <script defer="defer"  src="/lib/jQuery-2.0.3/jquery-2.0.3.min.js"></script><script defer="defer"  src="/lib/bootstrap-3.0.0/js/bootstrap.min.js"></script>
+  <script defer="defer"  src="/lib/jQuery-2.0.3/jquery-2.0.3.min.js"></script><script defer="defer"  src="/lib/bootstrap-3.0.0/js/bootstrap.min.js"></script><script defer="defer"  src="/lib/ga.js"></script>
 </body>
 </html>
