--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-44041331-1', 'cfiet.net', {
+    ga('create', 'UA-44041331-1', {
       sampleRate: 100,
       siteSpeedSampleRate: 100
     });
