Deployement up to 9ec5b7dcaee05eefe2adb8a1ff9ef807a2fdd702

--- a/about.html
+++ b/about.html
@@ -103,6 +103,8 @@
 
   <script>
     timers.global.start("page:scripts");
+
+    var disqus_shortname = 'strictlylazy';
   </script>
   <script >(function(){
 	/* Did we just livereload? */
@@ -149,7 +151,7 @@ var inject = function(){
 	} else {
 		inject();
 	}
-})();</script><script defer="defer"  src="/lib/jQuery-2.0.3/jquery-2.0.3.min.js"></script><script defer="defer"  src="/lib/bootstrap-3.0.0/js/bootstrap.min.js"></script>
+})();</script><script defer="defer"  src="/lib/jQuery-2.0.3/jquery-2.0.3.min.js"></script><script defer="defer"  src="/lib/bootstrap-3.0.0/js/bootstrap.min.js"></script><script defer="defer"  src="/lib/disqus.count.js"></script><script defer="defer"  src="/lib/disqus.embed.js"></script>
   <script>
     ga('send', 'timing', 'page', 'scripts', Math.round(timers.global.stop("page:scripts")));
   </script>
