--- a/src/documents/about.html
+++ b/src/documents/about.html
@@ -8,9 +8,8 @@ menuItem: 2
   <img src="/img/avatar.jpg" alt="Avatar" class="img-circle avatar" />
 
   <p>
-    Hi, I'm Maciej, a passinate hacker and software developer by education and profession.
-    During daytime I design, develop and maintain frontend solutions for  <a href="http://www.medius-group.com/">Medius</a>
-    and after dawn I embrace my passion for hacking and technology.
+    Hi, I'm Maciej, a passionate hacker and software developer by education and profession,
+    currently leaving and working in London, UK.
   </p>
   <p role="contentinfo">
     <a href="index.html">Strictly Lazy</a> is the place where I put together my unfinished projects,
