Fixed embarassing typo

--- a/src/documents/about.html
+++ b/src/documents/about.html
@@ -9,7 +9,7 @@ menuItem: 2
 
   <p>
     Hi, I'm Maciej, a passionate hacker and software developer by education and profession,
-    currently leaving and working in London, UK.
+    currently living and working in London, UK.
   </p>
   <p role="contentinfo">
     <a href="index.html">Strictly Lazy</a> is the place where I put together my unfinished projects,
