Expanded About page

--- a/src/documents/about.html
+++ b/src/documents/about.html
@@ -4,7 +4,9 @@ title: About
 menuItem: 2
 ---
 
-<div class="about">
+<section class="about">
+  <h2>Bio</h2>
+
   <img src="/img/avatar.jpg" alt="Avatar" class="img-circle avatar" />
 
   <p>
@@ -15,4 +17,34 @@ menuItem: 2
     <a href="index.html">Strictly Lazy</a> is the place where I put together my unfinished projects,
     ideas and thoughts and try to make them somehow interesting and time-worthy.
   </p>
-</div>
+</section>
+<section class="projects">
+  <h2>Some stuff I've made</h2>
+  <dl>
+    <dt>
+      <a href="https://new-glorious-leader.herokuapp.com" alt="Glorious Leader">Glorious Leader</a>
+    </dt>
+    <dd>
+      Kim Jong Un quote generator. See project's <a href="https://github.com/cfiet/glorious-leader-new" alt="Glorious Leader github page">Github page</a> for more information.
+      There is also an older version <a href="https://github.com/cfiet/glorious-leader" alt="Glorious Leader old project">here</a>
+    </dd>
+
+    <dt>
+      <a href="http://blog.cfiet.net/robbojs/" alt="Robbo JS">Robbo.js</a>
+    </dt>
+    <dd>
+      My favorite childhood game ported to browser. Blog posts about porting:
+      <a href="/posts/2014/bringing-back-eighties-with-emscripten-part1.html" alt="Robbo JS, part 1">Part 1</a>,
+      <a href="/posts/2014/bringing-back-eighties-with-emscripten-part2.html" alt="Robbo JS, part 2">Part 2</a>,
+      <a href="/posts/2014/bringing-back-eighties-with-emscripten-part3.html" alt="Robbo JS, part 3">Part 3</a>
+    </dd>
+  </dl>
+</section>
+<section class="small-projects">
+  <h2>Small projects, random Pens and Plunks</h2>
+  <ul>
+    <li><a href="https://codepen.io/cfiet/full/QEYapN/" alt="Codepen, CSS material-like input">Pure CSS material-like input #1</a></li>
+    <li><a href="https://codepen.io/cfiet/full/QEYAkd/" alt="Codepen, other CSS material-like input">Pure CSS material-like input #2</a></li>
+    <li><a href="https://run.plnkr.co/plunks/aTDedNtUZOKPJ28M1P1j/" alt="Random Plunk">This thing</a></li>
+  </ul>
+</section>
