Added social links

--- a/src/documents/about.html
+++ b/src/documents/about.html
@@ -17,6 +17,11 @@ menuItem: 2
     <a href="index.html">Strictly Lazy</a> is the place where I put together my unfinished projects,
     ideas and thoughts and try to make them somehow interesting and time-worthy.
   </p>
+  <p class="social">
+    <a href="https://github.com/cfiet" alt="Github"><img src="/img/Github.png" width="32" height="32" /></a>
+    <a href="https://twitter.com/IRLmaciek" alt="Twitter"><img src="/img/Twitter.png" width="32" height="32" /></a>
+    <a href="https://www.linkedin.com/in/maciej-makowski-5614937b" alt="Linkedin"><img src="/img/Linkedin.png" width="34" height="32" /></a>
+  </p>
 </section>
 <section class="projects">
   <h2>Some stuff I've made</h2>
