--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
 
     var disqus_shortname = 'strictlylazy';
   </script>
-  <script defer="defer"  src="/lib/jjquery-3.3.1.min.js"></script><script defer="defer"  src="/lib/bootstrap-3.4.0/js/bootstrap.min.js"></script><script defer="defer"  src="/lib/disqus.count.js"></script><script defer="defer"  src="/lib/disqus.embed.js"></script>
+  <script defer="defer"  src="/lib/jquery-3.3.1.min.js"></script><script defer="defer"  src="/lib/bootstrap-3.4.0/js/bootstrap.min.js"></script><script defer="defer"  src="/lib/disqus.count.js"></script><script defer="defer"  src="/lib/disqus.embed.js"></script>
   <script>
     ga('send', 'timing', 'page', 'scripts', Math.round(timers.global.stop("page:scripts")));
   </script>
