--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ it seemed natural candidate for bringing back all the 1980s gaming fun to the mo
 
     var disqus_shortname = 'strictlylazy';
   </script>
-  <script defer="defer"  src="/lib/jjquery-3.3.1.min.js"></script><script defer="defer"  src="/lib/bootstrap-3.4.0/js/bootstrap.min.js"></script><script defer="defer"  src="/lib/disqus.count.js"></script><script defer="defer"  src="/lib/disqus.embed.js"></script>
+  <script defer="defer"  src="/lib/jquery-3.3.1.min.js"></script><script defer="defer"  src="/lib/bootstrap-3.4.0/js/bootstrap.min.js"></script><script defer="defer"  src="/lib/disqus.count.js"></script><script defer="defer"  src="/lib/disqus.embed.js"></script>
   <script>
     ga('send', 'timing', 'page', 'scripts', Math.round(timers.global.stop("page:scripts")));
   </script>
