--- a/index.html
+++ b/index.html
@@ -115,11 +115,8 @@
 <p>I have recently found myself spending more and more of my spare time
 learning <a href="https://www.rust-lang.org/">Rust</a>, which I find a very 
 unique and interesting experience. I feel it&#39;s an amazing opportunity to 
-re-start this blog and share some of my thoughts and opinions, 
-hopefully learning on the way and showing some of the cool stuff I&#39;m making.</p>
-<p>So stay tuned, tomorrow I&#39;m planning to share quite a long write-up
-on why, out of all the languages out there, I&#39;ve decided to spend
-my time on Rust.</p>
+re-start this blog and share some of my thoughts, hopefully learning on 
+the way and showing some of the cool stuff I&#39;m making.</p>
 
         
         
