Let's just remove it before anyone notices

--- a/src/documents/about.html
+++ b/src/documents/about.html
@@ -10,7 +10,7 @@ menuItem: 2
   <img src="/img/avatar.jpg" alt="Avatar" class="img-circle avatar" />
 
   <p>
-    Hi, I'm Maciej, a passionate hacker and software developer by education and profession,
+    Hi, I'm Maciek, a passionate hacker and software developer by education and profession,
     currently living and working in London, UK.
   </p>
   <p role="contentinfo">
